Wed May 22 21:26:47 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* ruby.c (proc_options): -T consumes digits only.

Wed May 22 20:18:31 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: need not link vsnprintf.o on MinGW.

Wed May 22 18:40:22 2002  Minero Aoki  <aamine@loveruby.net>

	* parse.y (yylex): case '<': here-document has eaten '-'.

Tue May 21 13:25:18 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* misc/ruby-mode.el (ruby-font-lock-keywords): symbols end with
	  '_'.

Tue May 21 04:48:37 2002  Sean Chittenden <sean@chittenden.org>

	* lib/cgi-lib.rb: Checking for constant MOD_RUBY instead of
	  environment variable. Remove a mod_ruby warning and use
	  Apache::request.headers_out[] instead.

Mon May 20 13:28:52 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* io.c (rb_io_clone): writing stream was not copied properly.

Fri May 17 16:16:19 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* sampl/test.rb: use eval instead of './miniruby -c',
	  in order to check a syntax error.

Thu May 16 16:14:25 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (rb_thread_select): cleanup conditional compilation.

Thu May 16 15:14:48 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* djgpp/config.hin, djgpp/config.sed: catch up with the latest change.

Wed May 15 06:13:35 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_schedule): need to preserve errno before
	  calling rb_trap_exec().

	* regex.c (calculate_must_string): a bug in charset/charset_not
	  parsing.

Tue May 14 14:49:05 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* gc.c (is_pointer_to_heap): avoid GCC 3.1 warnings.

	* missing/strftime.c (timezone): it should take no argument on Cygwin.

Tue May 14 09:15:39 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (blk_orphan): the wrong condition; backported from 1.7

Tue May 14 03:07:35 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_clear_cache_by_class): new function.
